# qdo-gotrue-api

./: .env.example  .gitignore  Cargo.toml  README.md
examples/signup/: main.rs
src/: lib.rs
