[package]
name = "qdo_gotrue_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version="1.0", features=["derive"]}
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0" 

